third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/very_large_1.disassembled.exp
processed 1 task
task 0 lines 3-33:  publish [// Bytecode version v8]
Error: error: expected `)`, found `copy`
  ┌─ test:8:26
  │
8 │     local l0: |(|(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop), (|(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop), (|(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)| has copy + drop has copy + drop
  │                          ^^^^


