third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/very_large_1.disassembled
//**** Cross-compiled for `masm` syntax from `tests/no-v1-comparison/closures/very_large_1.move`

//# publish
// Bytecode version v8
module 0xcafe::Module0
// Function definition at index 0
#[persistent] public fun function32()
    local l0: |(|(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop), (|(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop), (|(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)| has copy + drop has copy + drop
    pack_closure __lambda__2__function32, 0
    pack_closure __lambda__4__function32, 0
    st_loc l0
    mut_borrow_loc l0
    write_ref
    // @5
    ret

// Function definition at index 1
fun __lambda__1__function32(l0: |bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop, l1: |(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop, l2: |(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)
    ret

// Function definition at index 2
fun __lambda__2__function32(l0: |(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop, l1: |(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop, l2: |(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop): |(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)| has copy + drop
    pack_closure __lambda__1__function32, 0
    ret

// Function definition at index 3
fun __lambda__3__function32(l0: |bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop, l1: |(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop, l2: |(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)
    ret

// Function definition at index 4
fun __lambda__4__function32(l0: |(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop, l1: |(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop, l2: |(|| has copy + drop)||(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)|u8 has copy + drop has copy + drop): |(|bool, bool, u8, bool, u8, u8, (|(|| has copy + drop), (|| has copy + drop), (|| has copy + drop)||| has copy + drop has copy + drop), (|(|| has copy + drop)||| has copy + drop has copy + drop)|u8 has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop), (|(|(|| has copy + drop)||| has copy + drop has copy + drop)||(|| has copy + drop)||| has copy + drop has copy + drop has copy + drop)| has copy + drop
    pack_closure __lambda__3__function32, 0
    ret

